--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "22": "^0.0.0",
+    "cloudinary": "^2.8.0",
     "form-data": "^4.0.5",
     "next": "16.0.1",
     "react": "19.2.0",
